# Custom-Ai-Ops

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  namage.md  solve.md  tests.md
.github/workflows/: ci.yaml
apps/: argocd-app-dev.yaml  argocd-app-prod.yaml  argocd-appset-dev.yaml  argocd-appset-prod.yaml  argocd-appset-staging.yaml  argocd-appset.yaml  argocd-health-checks.yaml
charts/ai-gateway/: Chart.yaml  values.yaml
charts/ai-gateway/templates/: _helpers.tpl  backend-traffic-policy.yaml  httproute.yaml  secrets.yaml
charts/bjw-template/: Chart.yaml  values.yaml
charts/bjw-template/templates/: _helpers.tpl
charts/model-serving-engine/: Chart.yaml  values.yaml
charts/model-serving-engine/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  seed-job.yaml  service.yaml  statefulset.yaml
charts/model-serving-engine/values/: llamacpp.yaml  onnx-genai.yaml  vllm.yaml
charts/model-serving-llamacpp/: Chart.yaml  values.yaml
charts/model-serving-llamacpp/templates/: configmap.yaml  statefulset.yaml
charts/model-serving-onnx-rust/: Chart.yaml  values.yaml
charts/model-serving-onnx-rust/templates/: configmap.yaml  statefulset.yaml
charts/model-serving-rayserve/: Chart.yaml  values.yaml
charts/model-serving-rayserve/templates/: configmap.yaml  service.yaml  statefulset.yaml
charts/model-serving-triton/: Chart.yaml  values.yaml
charts/model-serving-triton/templates/: configmap.yaml  service.yaml  statefulset.yaml
charts/model-serving-vllm/: Chart.yaml  values.yaml
docs/adr/: 0001-multi-format-architecture.md  0002-envoy-ai-gateway.md  0003-separate-engine-charts.md
docs/architecture/: 00-overview.md  01-formats-and-engines.md  02-gpu-scheduling.md  03-gateway-federation.md  04-gitops-deployment.md  05-observability.md  06-resilience-and-dr.md  07-capacity-forecasting.md
docs/runbooks/: gpu-node-failure.md  latency-spike.md  pod-crashloop.md
environments/dev/: kustomization.yaml  values.yaml
environments/prod/: kustomization.yaml  values.yaml
environments/staging/: kustomization.yaml  values.yaml
models/: registry.yaml
models/llama-3-8b-instruct/: budget.md  eval-report.md  model.md
observability/: envoy-gateway-config.yaml  prometheus-anomaly-rules.yaml
observability/alertmanager-routes/: config.yaml
observability/grafana-dashboards/: dcgm-dashboard.json  model-serving-dashboard.json
tests/chaos/: gpu-chaos.yaml
tests/load/: load-test.js
tests/smoke/: smoke-test.sh
tools/engine-selector/: Cargo.toml  README.md
tools/engine-selector/src/: main.rs
tools/model-onboarding/: Cargo.toml
tools/model-onboarding/src/: main.rs
tools/vram-budget-calc/: Cargo.toml
tools/vram-budget-calc/src/: main.rs
(+3 files in other folders)
