[workspace]
resolver = "2"
members = [
    "tools/engine-selector",
    "tools/vram-budget-calc",
    "tools/model-onboarding",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/onnx-ai/onnx-ai-helm"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"