[package]
name = "engine-selector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI that selects the optimal serving engine for a given ML model format"

[[bin]]
name = "engine-selector"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }