[package]
name = "vram-budget-calc"
version = "0.1.0"
edition = "2021"
authors = ["onnx-ai-helm contributors"]
description = "VRAM budget calculator for ML model deployment validation"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
