[package]
name = "vram-budget-calc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI that calculates whether a model fits within GPU VRAM constraints"

[[bin]]
name = "vram-budget-calc"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }